Fixed screen resize issue, added exception in fetch
Colors should be scroll able now if it doesn't fit your device's screen. Changed the way it moves the divs so resizing the screen doesn't reset where they are. Added exception in the fetch if Scryfall returned something unexpected.

--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ input[type=number] {
 }
 
 .loadingSpinner {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+    border: 16px solid #3498db;
+    border-top: 16px solid #30fff5;
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -56,6 +56,7 @@ input[type=number] {
     flex-direction: column;
     transition: all 1s ease-in-out;
     top: 0;
+    overflow: auto;
 }
 
 .header {
@@ -65,6 +66,7 @@ input[type=number] {
     background-color: #8C8C8C;
     width: 100%;
     height: 10%;
+    min-height: 45px;
     top: 0px;
     left: 0px;
     z-index: 4;
